# SPDX-FileCopyrightText: Nucleus <nucleus-ffm@posteo.de>
# SPDX-License-Identifier: CC0-1.0
[project]
name = "foss-public-alert-server"
version = "0.2.0"
description = "A server that aggregates and distributes CAP alerts worldwide."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.3",
    "django>=6.0,<7.0",
    "django-celery-beat>=2.9.0",
    "django-prometheus>=2.4.0", # FIXME: version 2.4.1 does not yet support Django >=6.0
    "feedparser>=6.0.12",
    "flower>=2.0.1",
    "gdal==3.10.3", # this version has to match the local gdal version, check with: gdal --version
    "gdown>=6.0.0",
    "kombu==5.6.2",
    "prometheus-client>=0.25.0",
    "psycopg2>=2.9.12",
    "pyshp>=3.0.3",
    "python-dateutil>=2.9.0.post0",
    "pywebpush>=2.3.0",
    "requests>=2.33.1",
    "requests-cache>=1.3.1",
    "ruff>=0.15.12",
    "tldextract>=5.3.1",
    "uwsgi>=2.0.31",
]

[project.urls]
Homepage = "https://invent.kde.org/webapps/foss-public-alert-server"
Issues = "https://invent.kde.org/webapps/foss-public-alert-server/-/issues"

[tool.ruff.lint]
select = [
    # pycodestyle
    "D",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
